# snyth

./: Pipfile  README.md  environment.yml  setup.cfg
snyth/: algorithm.py  settings.py  voice.py
snyth/components/: dco.py
snyth/debug/: graphs.py
src/snyth/: __init__.py  component.py  logging.py  midi.py  ports.py  voice.py
src/snyth/components/: adsr_envelope.py  constant.py  dco.py  multiplier.py  subtractive_operator.py
src/snyth/debug/: graphs.py  play.py  samples.py
