[metadata]
name = snyth
version = 0.1.0
description = Python Music Synthesizer
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
package_dir =
    =src
install_requires =
    keyboard
    #pyaudio
    pygame
    numpy

[options.extras_require]
all = graphviz; matplotlib
